<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
    android:layout_height="match_parent" android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin" tools:context=".MainActivity">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:text="@string/app_home_header"
        android:id="@+id/mainTitle"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true" />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/spotifyTitle"
        android:id="@+id/button01"
        android:layout_marginTop="35dp"
        android:layout_below="@+id/mainTitle"
        android:onClick="sendMessage"
        android:width="60dp"
        android:layout_alignLeft="@+id/mainTitle"
        android:layout_alignStart="@+id/mainTitle"
        android:layout_alignRight="@+id/mainTitle"
        android:layout_alignEnd="@+id/mainTitle" />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/scoresTitle"
        android:id="@+id/button"
        android:layout_below="@+id/button01"
        android:onClick="sendMessage"
        android:width="60dp"
        android:layout_alignLeft="@+id/mainTitle"
        android:layout_alignStart="@+id/mainTitle"
        android:layout_alignRight="@+id/mainTitle"
        android:layout_alignEnd="@+id/mainTitle" />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/libraryTitle"
        android:id="@+id/button2"
        android:layout_below="@+id/button"
        android:onClick="sendMessage"
        android:width="60dp"
        android:layout_alignLeft="@+id/mainTitle"
        android:layout_alignStart="@+id/mainTitle"
        android:layout_alignRight="@+id/mainTitle"
        android:layout_alignEnd="@+id/mainTitle" />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/buildItTitle"
        android:id="@+id/button3"
        android:layout_below="@+id/button2"
        android:onClick="sendMessage"
        android:width="60dp"
        android:layout_alignLeft="@+id/mainTitle"
        android:layout_alignStart="@+id/mainTitle"
        android:layout_alignRight="@+id/mainTitle"
        android:layout_alignEnd="@+id/mainTitle" />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/xyzTitle"
        android:id="@+id/button4"
        android:layout_below="@+id/button3"
        android:onClick="sendMessage"
        android:width="60dp"
        android:layout_alignLeft="@+id/mainTitle"
        android:layout_alignStart="@+id/mainTitle"
        android:layout_alignRight="@+id/mainTitle"
        android:layout_alignEnd="@+id/mainTitle"
        android:clickable="false" />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/myOwnTitle"
        android:id="@+id/button5"
        android:onClick="sendMessage"
        android:layout_below="@+id/button4"
        android:width="60dp"
        android:layout_alignRight="@+id/button4"
        android:layout_alignEnd="@+id/button4"
        android:layout_alignLeft="@+id/button4"
        android:layout_alignStart="@+id/button4"
        android:background="@android:color/holo_blue_dark"
        android:textColor="@android:color/white"/>

</RelativeLayout>
